# voxels

./: '  .gitignore  Cargo.toml  README.md  rustfmt.toml
assets/shader/: terrain.wgsl
res/data/blocks/: air.toml  test.toml
res/shaders/: terrain.wgsl
src/: block.rs  camera.rs  chunk.rs  fly_camera.rs  input.rs  main.rs  render.rs  tasks.rs  terrain.rs  time.rs  transform.rs  util.rs  world.rs  world_renderer.rs
src/block/: mod.rs  model.rs
src/core/: input.rs  mod.rs  tasks.rs  time.rs
src/core/wgpu_util/: bind_group_builder.rs  mesh.rs  mip.wgsl  mip_generator.rs  mod.rs  pipeline_builder.rs  texture.rs  vertex.rs  wgpu_context.rs
src/render/: camera.rs  chunk.rs  chunk_mesh_gen.rs  chunk_meshing.rs  chunks.rs  context.rs  engine.rs  frustum_culling.rs  mesh.rs  mod.rs  render_context.rs  render_engine.rs  renderer.rs  terrain.rs  texture.rs  util.rs
src/render/chunk/: meshing.rs  mod.rs  render_group.rs  vertex.rs
src/render/chunks/: batching.rs  meshing.rs  visibility_search.rs
src/render/shaders/: terrain.wgsl
src/render/terrain/: cave_culling.rs  chunk_batching.rs  face.rs  meshing.rs  render_groups.rs  vertex.rs  visibility_search.rs
src/render/util/: bind_group_builder.rs  mesh.rs  mip_generator.rs  pipeline_builder.rs  texture.rs
src/renderer/: camera.rs  frustum_culling.rs  mod.rs
src/renderer/terrain/: batching.rs  meshing.rs  mod.rs  vertex.rs  (+1 more)
src/shaders/: terrain.wgsl  triangle.wgsl
src/terrain/: area.rs  block.rs  chunk.rs  event.rs  lighting.rs  load_area.rs  mod.rs  position_types.rs  temporary_generation.rs
src/util/: dictionary_encoding.rs  face.rs  face_index.rs  measure_time.rs  size.rs  vector_map.rs
src/world/: event.rs
(+13 files in other folders)
