[package]
name = "voxels"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

# enable full optimizations for dependencies in dev mode
[profile.dev.package."*"]
opt-level = 3

[dependencies]
array-init = "2.1"
bracket-noise = "0.8"
bytemuck = { version = "1.15", features = [ "derive" ] }
derive_more = "0.99"
either = "1.12.0"
env_logger = "0.11"
generational-arena = "0.2.9"
glam = "0.27"
image = "0.25"
itertools = "0.13"
log = "0.4"
pollster = "0.3"
rustc-hash = "1.1.0"
thiserror = "1.0"
wgpu = "0.20"
winit = "0.30"

